5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1635_1054.log
== TEST (2019-04-14 11:20:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
coordenadax = float(input("x: "))
coordenaday = float(input("y: "))

if(2*coordenadax + coordenaday == 3)
	mensagem = "ponto pertence a reta"
	print(mensagem)
else:
	mensagem = "ponto nao pertence a reta"
	print(mensagem)
-- ERROR:
File "XXXX", line 7
    if(2*coordenadax + coordenaday == 3)
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:20:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
coordenadax = float(input("x: "))
coordenaday = float(input("y: "))

if(2*coordenadax + coordenaday == 3)
	mensagem = "ponto pertence a reta"
	print(mensagem)
else:
	mensagem = "ponto nao pertence a reta"
	print(mensagem)
-- EXECUTION TIME:
0.15239
-- ERROR:
  File "/home/codebench/codes/1635/1054/main.py", line 7
    if(2*coordenadax + coordenaday == 3)
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:21:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
coordenadax = float(input("x: "))
coordenaday = float(input("y: "))

if(2*coordenadax + coordenaday == 3)
	mensagem = "ponto pertence a reta"
	print(mensagem)
else:
	mensagem = "ponto nao pertence a reta"
	print(mensagem)
-- ERROR:
File "XXXX", line 7
    if(2*coordenadax + coordenaday == 3)
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:21:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
coordenadax = float(input("x: "))
coordenaday = float(input("y: "))

if(2*coordenadax + coordenaday == 3):
	mensagem = "ponto pertence a reta"
	print(mensagem)
else:
	mensagem = "ponto nao pertence a reta"
	print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:21:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
coordenadax = float(input("x: "))
coordenaday = float(input("y: "))

if(2*coordenadax + coordenaday == 3):
	mensagem = "ponto pertence a reta"
	print(mensagem)
else:
	mensagem = "ponto nao pertence a reta"
	print(mensagem)
-- EXECUTION TIME:
0.162965
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
